--- a/HTML_CSS/CSS_Fundamentals/index_styles.css
+++ b/HTML_CSS/CSS_Fundamentals/index_styles.css
@@ -2,21 +2,32 @@ body {
     background-color: lightblue;
 }
 
+/* Build Container */
 .container {
     background-color: lightgreen;
-    width: 800px;
+    width: 1200px;
     margin: 0 auto;
-    position: relative;
 }
 
-.original {
-    position: absolute;
-    top: 0;
-    left: 0;
+.flex-page {
+    display: flex;
+    gap: 48px;
+    /* We add this property to ensure the aside DOES NOT go all the way to the bottom of our page */
+    align-items: flex-start;
 }
 
-.offset {
-    position: absolute;
-    top: 20%;
-    left: -2%;
+
+.red {
+    background-color: rgb(241, 90, 90);
+    /* we use flex:1 to allow this element to take up all available space */
+    flex: 1;
+}
+
+.blue {
+    background-color: rgb(65, 65, 195);
+    flex: 0 0 300px;
+}
+
+.green {
+    background-color: green;
 }
