--- a/HTML_CSS/CSS_Fundamentals/index_styles.css
+++ b/HTML_CSS/CSS_Fundamentals/index_styles.css
@@ -12,13 +12,22 @@ body {
     background-color: black;
     font-size: 24px;
     display: grid;
-    grid-template-columns: 1fr 300px;
-    gap: 15px
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 15px;
+    height: 400px;
+}
+
+.el {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .el-1 {
     background-color: red;
-    height: 100px;
+    /* height: 100px; */
 }
 
 .el-2 {
@@ -31,7 +40,6 @@ body {
 
 .el-4 {
     background-color: orange;
-    height: 100px;
 
 }
 
