--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -9,7 +9,18 @@
 .main-container {
     width: 1280px;
     margin: 0 auto;
-    background-color: lightslategray;
+    background-color: rgb(197, 199, 200);
+    margin-top: 32px;
+}
+
+header {
+    margin-top: 32px;
+    margin-bottom: 32px;
+}
+
+section {
+    margin-top: 32px;
+    margin-bottom: 32px;
 }
 
 .nav-bar-elms {
@@ -21,15 +32,21 @@ ul {
     list-style-type: none;
 }
 
-.grid-2-col {
+.grid-2-cols {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 500px;
+    column-gap: 32px;
+    /* height: 500px; */
 }
 
-.header-text {
+.header-box {
     display: flex;
     flex-direction: column;
+}
+
+.header-title {
+
+    margin-bottom: 24px;
 }
 
 h1 {
@@ -41,19 +58,35 @@ h1 {
     position: relative;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+}
+
 .light-theme-code {
     background-color: darkgreen;
-    position: absolute;
+    /* position: absolute;
     top: 0;
-    left: 0;
-    max-height: 100%;
+    left: 0; */
+
 }
 
 
-.dark-theme-code {
+/* .dark-theme-code {
     background-color: yellow;
     position: absolute;
     top: 7%;
     left: 25%;
     max-height: 100%;
+} */
+
+
+.grid-3-cols {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+}
+
+.testimonial-box {
+    grid-column: 2/4;
 }
