--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -1,3 +1,11 @@
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
+
 /* Global Reset */
 
 * {
@@ -9,9 +17,10 @@
 
 body {
     font-family: 'Inter', sans-serif;
-    line-height: 160%;
+    line-height: 1.85em;
     letter-spacing: 1px;
     background-color: whitesmoke;
+    color: black;
 }
 
 .main-container {
@@ -24,31 +33,32 @@ body {
 #navbar-logo-text {
     font-family: 'Permanent Marker', 'Inter', sans-serif;
     font-size: 24px;
-    color: #306998;
+    /* color: #306998; */
+}
+
+nav {
+    margin-bottom: 48px;
 }
 
 header {
-    margin-top: 32px;
-    margin-bottom: 68px;
+    margin-bottom: 64px;
 }
 
 section {
-    margin-top: 48px;
-    margin-bottom: 58px;
+    margin-bottom: 64px;
 }
 
 footer {
     margin-bottom: 28px;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .nav-bar-elms {
     display: flex;
     justify-content: space-between;
-}
-
-ul {
+    font-weight: 500;
     list-style-type: none;
+
 }
 
 .grid-3-cols {
@@ -71,10 +81,6 @@ ul {
     justify-content: space-around;
 }
 
-.header-title {
-    font-size: 42px;
-}
-
 .header-text {
     font-size: 18px;
 
@@ -86,13 +92,16 @@ ul {
 
 h1 {
     font-family: 'Permanent Marker', 'Inter', sans-serif;
+    font-size: 44px;
 }
 
 h2 {
-    margin-bottom: 18px;
+    font-size: 30px;
+    margin-bottom: 32px;
 }
 
 h3 {
+    font-size: 24px;
     margin-bottom: 12px;
 }
 
@@ -140,23 +149,35 @@ img {
 .testimonial-title {
     font-family: 'Permanent Marker', 'Inter', sans-serif;
     font-size: 34px;
+    margin-bottom: 10px;
 }
 
+/* blockquote,
+p {
+    line-height: 1.8;
+} */
+
 #simple {
-    color: #306998
+    color: #306998;
+    display: inline-block;
+    margin-bottom: 10px;
 }
 
 #elegant {
-    color: #f1c936
+    color: #f1c936;
+    display: inline-block;
+    margin-bottom: 10px;
 }
 
 #popular {
-    color: #646464
+    color: #646464;
+    display: inline-block;
+    margin-bottom: 10px;
 }
 
 #small-python {
     position: absolute;
-    top: 0;
+    bottom: 0;
     right: 75px;
     height: 90px;
     width: 90px;
@@ -171,23 +192,26 @@ img {
 .framework-box {
     display: flex;
     flex-direction: column;
-    gap: 32px
+    gap: 24px;
 }
+
 
 .framework-details {
     list-style-type: circle;
 }
 
 .framework-title {
-    font-family: 'Permanent Marker', 'Inter', sans-serif;
-    font-size: 24px;
+    /* font-family: 'Permanent Marker', 'Inter', sans-serif; */
+    /* letter-spacing: 3px; */
+    margin-bottom: 0;
 
 }
 
-span {
+
+/* span {
     display: inline-block;
     margin-bottom: 10px;
-}
+} */
 
 .courses-flex-box {
     display: flex;
