--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -10,6 +10,8 @@ PYTHON COLORS
 BLUE:  #306998;
 YELLOW: #f1c936;
 GREY: #646464
+LIGHT-CODE: #eceef5
+
 
 
 TEXT COLOR
@@ -53,11 +55,8 @@ nav {
 
 header,
 section {
-    margin-bottom: 128px;
+    margin-bottom: 96px;
 }
-
-
-
 
 .nav-bar-elms {
     display: flex;
@@ -115,17 +114,21 @@ h3 {
 }
 
 .header-images {
-    background-color: orange;
+    /* background-color: orange; */
     position: relative;
 }
 
 img {
     width: 100%;
     height: 100%;
+    border-radius: 8px;
     /* object-fit: scale-down; */
 
 }
 
+.button {
+    border-radius: 8px;
+}
 
 .button:link,
 .button:visited {
@@ -149,9 +152,20 @@ img {
     font-weight: 600;
 }
 
-.framework-img {
-    height: 200px;
+.button-small:link,
+.button-small:visited {
+    text-align: center;
+    padding: 4px 8px;
+
 }
+
+.button-small:hover,
+.button-small:active {
+    text-align: center;
+    padding: 4px 8px;
+
+}
+
 
 .light-theme-code {
     background-color: darkgreen;
@@ -174,9 +188,15 @@ img {
 }
 
 .testimonial-section {
-    background-color: #18354c;
-    color: white;
+    background-color: #eceef5;
+    color: black;
     padding: 24px;
+    border-radius: 8px;
+
+}
+
+#python-code {
+    border-radius: 8px;
 }
 
 .testimonial-flex-box {
@@ -184,7 +204,6 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: relative;
 
 }
 
@@ -201,16 +220,21 @@ p {
 #simple {
     color: #306998;
     display: inline-block;
+    margin-bottom: 0;
 }
 
 #elegant {
-    color: #f1c936;
+    color: #e6b400;
     display: inline-block;
+    margin-bottom: 0;
+
 }
 
 #popular {
-    color: #646464;
+    color: #545454;
     display: inline-block;
+    margin-bottom: 0;
+
 }
 
 #small-python {
@@ -230,27 +254,38 @@ p {
 .framework-box {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 16px;
+    padding: 32px 24px;
+    box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.07);
 }
 
 
 .framework-details {
     list-style-type: none;
+    font-size: 15px;
 }
 
 .small-li-icon {
-    font-size: 12px;
+    font-size: 10px;
 }
 
 .framework-title {
     margin-bottom: 0;
+    align-self: center;
+}
+
+.framework-image {
+    height: 100px;
+    width: 200px;
+    display: inline-block;
+    align-self: center;
 }
 
 
-/* span {
+span {
     display: inline-block;
-    margin-bottom: 10px;
-} */
+    margin-bottom: 16px;
+}
 
 .courses-flex-box {
     display: flex;
