--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -25,6 +25,10 @@ TEXT COLOR: #343a40
 
 /* Page CSS*/
 
+html {
+    font-size: 62.5%;
+}
+
 body {
     font-family: 'Inter', sans-serif;
     line-height: 1.6;
@@ -34,15 +38,15 @@ body {
 }
 
 .main-container {
-    max-width: 1200px;
+    max-width: 120rem;
     margin: 0 auto;
     /* background-color: rgb(197, 199, 200); */
-    margin-top: 32px;
+    margin-top: 3.2rem;
 }
 
 #navbar-logo-text {
     font-family: 'Permanent Marker', 'Inter', sans-serif;
-    font-size: 24px;
+    font-size: 2.4rem;
     /* color: #306998; */
 }
 
@@ -51,6 +55,11 @@ ul {
     list-style: none;
 }
 
+/* .navbar-dropdown-element:hover {
+    cursor: pointer;
+} */
+
+
 a {
     /* display: inline-block; */
     text-decoration: none;
@@ -58,11 +67,11 @@ a {
 
 header,
 section {
-    margin-bottom: 96px;
+    margin-bottom: 9.6rem;
 }
 
 nav {
-    padding: 10px;
+    padding: 1rem;
 }
 
 
@@ -77,37 +86,33 @@ nav {
 .top-nav-elements:visited {
     color: black;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 600;
 
 
 }
 
 .top-nav-elements:hover,
-.top-nav-elements:visited {
-    background-color: #eceef5;
-    padding: 4px 8px;
-    border-radius: 8px;
-}
+.top-nav-elements:visited {}
 
 
 .grid-3-cols {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 48px;
+    column-gap: 4.8rem;
 
 }
 
 .grid-2-cols {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 32px;
+    column-gap: 3.2rem;
     /* height: 500px; */
 }
 
 .nav-grid {
     align-items: center;
-    margin-bottom: 48px;
+    margin-bottom: 4.8rem;
 
 }
 
@@ -118,30 +123,30 @@ nav {
 } */
 
 .header-title {
-    margin-top: 48px;
-    margin-bottom: 24px;
+    margin-top: 4.8rem;
+    margin-bottom: 2.4rem;
 }
 
 .header-text {
-    font-size: 18px;
-    margin-bottom: 24px;
+    font-size: 1.8rem;
+    margin-bottom: 2.4rem;
 }
 
 
 h1 {
     font-family: 'Permanent Marker', 'Inter', sans-serif;
-    font-size: 44px;
+    font-size: 4.4rem;
 }
 
 h2 {
-    font-size: 32px;
-    margin-bottom: 16px;
+    font-size: 3.2rem;
+    margin-bottom: 1.6rem;
 }
 
 h3 {
-    font-size: 20px;
-    margin-top: 12px;
-    margin-bottom: 4px;
+    font-size: 2rem;
+    margin-top: 1.2rem;
+    margin-bottom: 0.4rem;
 }
 
 .header-images {
@@ -152,13 +157,13 @@ h3 {
 img {
     width: 100%;
     height: 100%;
-    border-radius: 8px;
+    border-radius: 0.8rem;
     /* object-fit: scale-down; */
 
 }
 
 .button {
-    border-radius: 8px;
+    border-radius: 0.8rem;
 }
 
 .button:link,
@@ -166,9 +171,9 @@ img {
     background-color: #f1c936;
     color: black;
     text-decoration: none;
-    padding: 12px 24px;
+    padding: 1.2rem 2.4rem;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 600;
 }
 
@@ -177,23 +182,23 @@ img {
     background-color: #d9b531;
     color: black;
     text-decoration: none;
-    padding: 12px 24px;
+    padding: 1.2rem 2.4rem;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 600;
 }
 
 .button-small:link,
 .button-small:visited {
     text-align: center;
-    padding: 4px 8px;
+    padding: 0.4rem 0.8rem;
 
 }
 
 .button-small:hover,
 .button-small:active {
     text-align: center;
-    padding: 4px 8px;
+    padding: 0.4rem 0.8rem;
 
 }
 
@@ -214,19 +219,19 @@ img {
 }
 
 .ph {
-    font-size: 36px;
+    font-size: 3.6rem;
 }
 
 .testimonial-section {
     background-color: #eceef5;
     color: black;
-    padding: 24px;
-    border-radius: 8px;
+    padding: 2.4rem;
+    border-radius: 0.8rem;
 
 }
 
 #python-code {
-    border-radius: 8px;
+    border-radius: 0.8rem;
 }
 
 .testimonial-flex-box {
@@ -239,13 +244,14 @@ img {
 
 .testimonial-title {
     font-family: 'Permanent Marker', 'Inter', sans-serif;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
-/* blockquote,
-p {
-    line-height: 1.8;
-} */
+
+p,
+blockquote {
+    font-size: 1.6rem;
+}
 
 #simple {
     color: #306998;
@@ -270,33 +276,33 @@ p {
 #small-python {
     position: absolute;
     bottom: 0;
-    right: 75px;
-    height: 90px;
-    width: 90px;
+    right: 7.5rem;
+    height: 9rem;
+    width: 9rem;
 }
 
 
 .testimonial-author {
-    margin-top: 10px;
+    margin-top: 1rem;
     font-style: italic;
 }
 
 .framework-box {
     display: flex;
     flex-direction: column;
-    gap: 16px;
-    padding: 32px 24px;
-    box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.07);
+    gap: 1.6rem;
+    padding: 3.2rem 2.4rem;
+    box-shadow: 0 2rem 3rem 0 rgba(0, 0, 0, 0.07);
 }
 
 
 .framework-details {
     list-style-type: none;
-    font-size: 15px;
+    font-size: 1.5rem;
 }
 
 .small-li-icon {
-    font-size: 10px;
+    font-size: 1rem;
 }
 
 .framework-title {
@@ -305,8 +311,8 @@ p {
 }
 
 .framework-image {
-    height: 100px;
-    width: 200px;
+    height: 10rem;
+    width: 20rem;
     display: inline-block;
     align-self: center;
 }
@@ -314,39 +320,39 @@ p {
 
 span {
     display: inline-block;
-    margin-bottom: 16px;
+    margin-bottom: 1.6rem;
 }
 
 .courses-flex-box {
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 5rem;
 
 }
 
 .course-1 {
-    height: 300px;
+    height: 30rem;
     background-color: lightcoral;
 }
 
 .course-2 {
-    height: 300px;
+    height: 30rem;
     background-color: bisque;
 }
 
 .grid-6-cols {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    column-gap: 24px;
+    column-gap: 2.4rem;
     background-color: #18354c;
 
 }
 
 footer {
     color: whitesmoke;
-    font-size: 14px;
+    font-size: 1.4rem;
 }
 
 .footer-div {
-    height: 350px;
+    height: 35rem;
 }
