--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -375,14 +375,38 @@ span {
 }
 
 .community-section {
-    height: 35rem;
-}
-
-.community-flex-box {
-    display: flex;
-    gap: 5rem;
+    padding: 9.6rem 0;
 
 }
+
+.community-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    border: 2px solid #32363a;
+
+}
+
+#html {
+    width: 30%;
+    /* height: 90%; */
+    height: auto;
+    justify-self: center;
+    padding: 3rem 0;
+
+}
+
+.community-element:link,
+.community-element:visited {
+    /* height: 12rem; */
+    padding: 5.2rem 0;
+    margin: 0;
+    border: 2px solid #32363a;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.community-element:hover,
+.community-element:active {}
 
 .course-1 {
     height: 30rem;
