building subcomponent navbar

--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -101,8 +101,8 @@ nav {
     list-style-type: none;
 }
 
-.parent-nav-elements:link,
-.parent-nav-elements:visited {
+.nav-elements:link,
+.nav-elements:visited {
     color: black;
     display: inline-block;
     font-size: 1.6rem;
@@ -115,24 +115,46 @@ nav {
 }
 
 
-.parent-nav-elements:hover,
-.parent-nav-elements:active {
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+    color: #f1c936;
+}
+
+.hover-underline-animation::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 3px;
+    bottom: 0;
+    left: 0;
     background-color: #f1c936;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+    /* box-shadow: 0 5px 10px #f1c936; */
+}
+
+.hover-underline-animation:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
 
 
-.projects-dropdown {
+.submenu-projects {
     display: none;
 }
 
-/* .parent-nav-elements:hover+.projects-dropdown {
-    display: inline-block;
+
+nav ul li:hover .submenu-projects {
+    display: block;
+    position: absolute;
+    z-index: 2;
+    background-color: #f6f7fa;
+    border-radius: 0.8rem;
+    margin-top: 1rem;
+    font-size: 1rem;
 }
-
-.navbar-dropdown-element {
-    padding: 0.3rem 1rem;
-} */
-
 
 
 .grid-3-cols {
