--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -78,25 +78,23 @@ ul {
     list-style: none;
 }
 
-
 a {
     /* display: inline-block; */
     text-decoration: none;
 }
-
 
 .nav-div ul {
     display: flex;
     justify-content: space-between;
     font-size: 1.6rem;
     font-weight: 600;
-
 }
 
-.nav-div ul li {
+/* .nav-div ul li {
     padding: 1rem 1rem;
     border-radius: 0.8rem;
-}
+
+} */
 
 
 .nav-div ul li a {
@@ -111,10 +109,10 @@ a {
 .nav-div ul li:hover .submenu-projects {
     display: block;
     position: absolute;
-    margin-left: -1.5rem;
+    margin-left: -0.5rem;
     z-index: 2;
     background-color: #f6f7fa;
-    border-radius: 0.8rem;
+    border-radius: 0.4rem;
 }
 
 
@@ -122,7 +120,12 @@ a {
     display: block;
     font-size: 1.4rem;
     font-weight: 400;
-    margin: 1rem;
+}
+
+.nav-div ul li:hover .submenu-projects ul li {
+    padding: 0.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
 
 .grid-3-cols {
@@ -153,15 +156,21 @@ a {
     justify-content: space-around;
 } */
 
-.header-title {
-    margin-top: 4.8rem;
-    margin-bottom: 2.4rem;
-}
 
 .header-text {
     font-size: 1.8rem;
-    margin-bottom: 2.4rem;
+    /* margin-bottom: 2.4rem; */
 }
+
+.header-box {
+    display: flex;
+    flex-direction: column;
+}
+
+.header-box>* {
+    margin-bottom: 2rem;
+}
+
 
 
 h1 {
@@ -184,18 +193,44 @@ h3 {
     /* background-color: orange; */
     position: relative;
     z-index: 1;
+
 }
 
 img {
     width: 100%;
     height: 100%;
     border-radius: 0.8rem;
+
     /* object-fit: scale-down; */
 
 }
 
+.community-members {
+    display: flex;
+}
+
+.community-members img {
+    height: 5rem;
+    width: 5rem;
+    margin-top: 1rem;
+    object-fit: cover;
+    border-radius: 20rem;
+    margin-left: -0.5rem;
+    margin-bottom: 5px;
+}
+
+.community-members img:first-child {
+    margin-left: 0rem;
+}
+
+.community-text p {
+
+    font-weight: bold;
+}
+
 .button {
     border-radius: 0.8rem;
+    align-self: flex-start;
 }
 
 .button:link,
@@ -203,21 +238,17 @@ img {
     background-color: #f1c936;
     color: black;
     text-decoration: none;
-    padding: 1.2rem 2.4rem;
+    padding: 0.8rem 1.6rem;
     display: inline-block;
-    font-size: 1.6rem;
+    font-size: 1.7rem;
     font-weight: 600;
+    transition: background-color 0.5s;
 }
 
 .button:hover,
 .button:active {
     background-color: #d9b531;
-    color: black;
-    text-decoration: none;
-    padding: 1.2rem 2.4rem;
-    display: inline-block;
-    font-size: 1.6rem;
-    font-weight: 600;
+
 }
 
 .button-small:link,
